--- a/tienda_online/sin_patrones.html
+++ b/tienda_online/sin_patrones.html
@@ -8,7 +8,7 @@
 <body>
     
     <!-- Titulo principal de la pagina -->
-    <h1>Tienda Online</h1>
+    <h1>TIENDA ONLINE SIN PATRONES DE DISEÑO</h1>
 
     <!-- Boton para ejecutar la funcion que muestra los productos -->
     <button onclick="mostrarProductos()">Mostrar Productos</button>
